Fixed horizontal scroll

--- a/Assignments/CS6314.502A1/index.css
+++ b/Assignments/CS6314.502A1/index.css
@@ -122,4 +122,5 @@ h1 {
     text-align: center;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
